(ALTB-36) feat: working docker image - env var pending